4.24: 7/XX/2011 (svn rYYYY)
	* CORE: Added Dao.queryForMatchingArgs() and queryForFieldValuesArgs() to avoid SQL escaping issues.  Thanks to coder sam.
	* CORE: Fixed a problem with updating a field's value to be null using the UpdateBuilder.  Thanks to Jeremy mcjunkin. Fixes bug #3359086.
	* CORE: Fixed foreign collection bugs where clear, remove, ... affected the whole table.  Thanks to Patras Vlad.  Fixes bug #3313003.
	* ANDROID: Added a OrmLiteBaseActivityGroup to the various base classes.  Thanks to zachawilson.

4.23: 6/3/2011 (svn r1805)
	* CORE: Allow the user to be able to override the persister for the built-in types as well.
	* CORE: Added a orderColumnName field to the ForeignCollectionField to order collections based on a column.
	* CORE: Moved the external log classes over to the JDBC package to make core a bit smaller.
	* CORE: Added queryForSameId(), createIfNotExists(), and createOrUpdate() to DAO.

4.22: 5/19/2011 (svn r1777)
	* CORE: Fixed major problem with DAO loops and caching.  Thanks much to the user list.  Fixes bug #3301588.
	* CORE: Fixed problem with queryForMatching() and queryForFieldValues() if no fields.  Thanks to JC.  Fixes bug #3301253.
	* CORE: Fixed problem with configuring fields in base class without annotations.  Thanks to JC and Rahan.  Fixed bug #3301698.
	* CORE: Fixed problem with LazyForeignCollection.toArray(T[]).  Thanks to Skylar.  Fixes bug #3302924.
	* CORE: Added initial support for defining external DataPersister classes for persisting non-built-in types.  Thanks to Craig.
	* CORE: Removed auto-downcasing of hand wired table name in DatabaseTableConfig.  Thanks to Tomas.  Fixes bug #3302976.
	* CORE: Added the maxEagerForeignCollectionLevel field to the @ForeignCollectionField annotation to limit recursion.
	* CORE: Renamed the maxForeignLevel field in @DatabaseField to be maxForeignAutoRefreshLevel to make more sense.