@@ -1,7 +1,10 @@
 4.24: 7/XX/2011 (svn rYYYY)
+	* CORE: Fixed a problem with updating a field's value to be null using UpdateBuilder. Thanks to Jeremy mcjunkin. Fixes bug #3359086.
+	* CORE: Fixed foreign collection bugs where clear, remove, ... affected the whole table. Thanks to Patras Vlad. Fixes bug #3313003.
+	* CORE: Fixed bug with the setting of the value of serializable types.  Thanks to kyle lampert.  Fixes #3363423.
 	* CORE: Added Dao.queryForMatchingArgs() and queryForFieldValuesArgs() to avoid SQL escaping issues.  Thanks to coder sam.
-	* CORE: Fixed a problem with updating a field's value to be null using the UpdateBuilder.  Thanks to Jeremy mcjunkin. Fixes bug #3359086.
-	* CORE: Fixed foreign collection bugs where clear, remove, ... affected the whole table.  Thanks to Patras Vlad.  Fixes bug #3313003.
+	* CORE: Added support for CREATE TABLE IF NOT EXISTS for Postgres > 9.1  Thanks to Daniel Colchete.
+	* CORE: Added arguments to Where.raw() and added Where.rawComparison() to better handle escaped args.  Thanks to Daniel Colchete.
 	* ANDROID: Added a OrmLiteBaseActivityGroup to the various base classes.  Thanks to zachawilson.
 
 4.23: 6/3/2011 (svn r1805)
